syntax = "proto3";

package zhengwei.netty.grpc.proto;

option java_package = "zhengwei.netty.grpc.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

message MyRequest {
    string user_name = 1;
}
message MyResponse {
    string real_name = 1;
}

service StudentService {
    rpc GetRealNameByUserName (MyRequest) returns (MyResponse) {
    }
}